Added Plotly time series CT chart. Added 'Weeks' option back in, and also 'Quarters'. If the user has selected 'Both' as the average choice then two line charts are produced: one of mean values, and one of medians. At the moment the averaging takes place up to the end of the time period. For example, if the user has selected 'Months' then there will be a data point on the last day of each month that is the average of the studies that took place up to that date. References issue #477

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -746,19 +746,32 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion10" href="#collapseWeeklyStudyMeanChart">
+                            <a data-toggle="collapse" data-parent="#accordion10" href="#collapseWeeklyStudyMeanChart" onclick="setTimeout(function() {triggerResizeEvent();}, 0);">
                                 {% if request.user.userprofile.plotAverageChoice == 'mean' %}
-                                    Charts of mean DLP of each study type over time ({{ request.user.userprofile.plotCTStudyMeanDLPOverTimePeriod }}).
+                                    Chart of mean DLP of each study type over time ({{ request.user.userprofile.plotCTStudyMeanDLPOverTimePeriod }}).
+                                {% elif request.user.userprofile.plotAverageChoice == 'median' %}
+                                    Chart of median DLP of each study type over time ({{ request.user.userprofile.plotCTStudyMeanDLPOverTimePeriod }}).
                                 {% else %}
-                                    Charts of median DLP of each study type over time ({{ request.user.userprofile.plotCTStudyMeanDLPOverTimePeriod }}).
+                                    Charts of mean and median DLP of each study type over time ({{ request.user.userprofile.plotCTStudyMeanDLPOverTimePeriod }}).
                                 {% endif %}
                             </a>
                         </h4>
                     </div>
                     <div id="collapseWeeklyStudyMeanChart" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <div id="studyAverageDLPOverTimeChartDiv"></div>
+                        {% if request.user.userprofile.plotAverageChoice in 'mean both' %}
+                        <div id="studyMeanDLPOverTimeChartParentDiv" class="panel-body">
+                            <div id="studyMeanDLPOverTimeChartDiv"></div>
+                            <a onclick="enterFullScreenPlotly('studyMeanDLPOverTimeChartDiv', 'studyMeanDLPOverTimeChartParentDiv');"
+                               class="btn btn-default btn-sm" role="button">Toggle fullscreen</a>
                         </div>
+                        {% endif %}
+                        {% if request.user.userprofile.plotAverageChoice in 'median both' %}
+                        <div id="studyMedianDLPOverTimeChartParentDiv" class="panel-body">
+                            <div id="studyMedianDLPOverTimeChartDiv"></div>
+                            <a onclick="enterFullScreenPlotly('studyMedianDLPOverTimeChartDiv', 'studyMedianDLPOverTimeChartParentDiv');"
+                               class="btn btn-default btn-sm" role="button">Toggle fullscreen</a>
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
