Added user option to group histograms and scatter charts by system name or series item name. References issue #477

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -458,7 +458,7 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#studyHistogramDLPDiv" href="#collapseStudyHistogramDLP" onclick="setTimeout(function() {triggerResizeEvent();}, 0);">
-                                    Histograms of DLP for each study protocol
+                                    Histograms of DLP for each study description
                                 </a>
                             </h4>
                         </div>
